# docker-django-example

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .hadolint.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml  customize  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements-lock.txt  requirements.txt  run
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/: .yarnrc  esbuild.config.js  esbuild.config.mjs  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
assets/app/: app.css  app.js
assets/app/tailwind/: after.css
assets/css/: app.css
assets/static/: 502.html  maintenance.html  robots.txt
src/: manage.py
src/config/: __init__.py  api.py  asgi.py  celery.py  gunicorn.py  settings.py  urls.py  wsgi.py
src/ecommerce/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/ecommerce/fixtures/: ProductModel.json
src/ecommerce/migrations/: 0001_initial.py
src/hello/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/main/: apps.py  views.py
src/pages/: tests.py  urls.py  views.py
src/products/: admin.py  apps.py  models.py  urls.py  views.py
src/products/migrations/: 0001_initial.py  0002_product_user.py
src/templates/ecommerce/: create-view.html  delete-view.html  detail-view.html  list-view-public.html  list-view.html  messages.html  search.html  update-view.html
src/templates/layouts/: index.html
src/templates/products/: product_detail.html  (+1 more)
src/up/: apps.py  tests.py  urls.py  views.py
(+1 files in other folders)
