[project]
name = "hello"
version = "0.1.0"
description = "An example Django app running in Docker."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django==6.0.5",
  "celery==5.6.3",
  "django-debug-toolbar==6.3.0",
  "gunicorn==26.0.0",
  "psycopg==3.3.4",
  "redis==7.4.0",
  "ruff==0.15.13",
  "setuptools==82.0.1",
  "whitenoise==6.12.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I", "SIM"]
